--- a/404.md
+++ b/404.md
@@ -2,7 +2,9 @@
 permalink: /404.html
 ---
 
+<link rel="stylesheet" type="text/css" href="/technote/my.css" />
+
 ### Error 404:
 
-Page not found
-==============
+# Page not found
+
